Misc minor touchups and updated benchmarks